--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./calculator(project).css">
+    <link rel="stylesheet" href="./calculator.css">
+    <script src="./calculator.js"></script>
 </head>
 <body>
 
